2004-08-13  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-action.h, src/xml/repr-action.cpp:

	  simplified code now that we can take advantage of garbage collection

2004-08-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/xml-tree.cpp (set_dt_select):
	  Address warning introduced in r1.21.
	  Minor other cleanups.

2004-08-12  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-css.cpp, src/xml/repr-private.h,
	  src/xml/repr.cpp, src/xml/repr.h:

	  make SPRepr gc-aware

2004-08-12  Carl Hetherington  <inkscape@carlh.net>

	* src/sp-chars.cpp src/sp-ellipse.cpp src/sp-flowtext.cpp
	src/sp-image.cpp src/sp-item-group.cpp src/sp-item.cpp
	src/sp-item.h src/sp-marker.cpp src/sp-offset.cpp src/sp-root.cpp
	src/sp-shape.cpp src/sp-spiral.cpp src/sp-star.cpp
	src/sp-symbol.cpp src/sp-text.cpp src/sp-use.cpp:
	const fixes to snappoints and bbox methods

	*  selection.cpp sp-ellipse.cpp sp-image.cpp sp-item-group.cpp
	sp-item-notify-moveto.cpp sp-item-rm-unsatisfied-cns.cpp
	sp-item-update-cns.cpp sp-item.cpp sp-item.h sp-offset.cpp
	sp-shape.cpp sp-spiral.cpp sp-star.cpp sp-text.cpp:
	use more efficient API for collecting snap points, suggested by Peter.

	* src/dialogs/desktop-properties.cpp: fix a cast warning.

	* src/dialogs/docker.cpp: fix an unused variable warning.

	* src/dialogs/stroke-style.cpp: add a static qualifier to a function.
	
2004-08-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-flowregion.cpp, src/sp-flowtext.cpp, src/sp-offset.cpp,
	src/splivarot.cpp, src/display/nr-arena-shape.cpp,
	src/livarot/PathConversion.cpp, src/livarot/Shape.cpp,
	src/livarot/Shape.h, src/livarot/ShapeDraw.cpp, src/livarot/ShapeMisc.cpp,
	src/livarot/ShapeRaster.cpp, src/livarot/ShapeSweep.cpp,
	src/livarot/ShapeSweepUtils.cpp:
	  Revert these files to their state prior to mental's "2004-08-08"
	  entry (the change made in 2004-08-09 02:23 UTC).

2004-08-11  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
