@@ -1,3 +1,9 @@
+2004-08-15  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/sp-rect.cpp (sp_rect_set_shape): Change rounded-rect
+	  behaviour to be closer to [opinion on www-svg as to the
+	  interpretation of] the SVG 1.1 specification.
+
 2004-08-13  MenTaLguY  <mental@rydia.net>
 
 	* src/xml/repr-action.h, src/xml/repr-action.cpp:
